# star-dust

./: .gitignore  COLOR_THEME_INTEGRATION.md  Cargo.toml  MATH_FORMULA_VISUALIZATION.md  README.md  build.rs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  lib.rs  main.ts  style.css  worker.ts
src/components/: ColorThemePanel.vue  ErrorBoundary.vue  ParticleErrorBoundary.vue
src/components/dashboard/: AttractorParams.vue  ControlPanel.vue  ControlSlider.vue  ControlToggle.vue  Dashboard.vue  PerformanceMonitor.vue  ThemeSelector.vue
src/composables/: useAppConfig.ts  useConfigStorage.ts  useMotionMode.ts  usePerformanceMetrics.ts
src/config/: AppConfig.ts
src/constants/: PhysicsConstants.ts
src/modules/: AppManager.ts
src/modules/attractors/: AttractorFactory.ts  CliffordAttractor.ts  LorenzAttractor.ts  RosslerAttractor.ts  ThomasAttractor.ts  index.ts  types.ts
src/modules/colors/: ColorManager.ts  ColorManagerExtended.ts  ColorMapper.ts  ColorTheme.ts
src/modules/core/: DoubleBufferManager.ts  FrustumCulling.ts  LODManager.ts
src/modules/interaction/: hammer.d.ts  index.ts
src/modules/noise/: FBMNoise.ts  GPUNoiseTexture.ts  NoiseTexture.ts  SimplexNoise.ts
src/modules/particles/: ComputeShader.ts  GPGUParticleSystem.ts  GPGUParticleSystem.types.ts  GPUParticleBuffer.ts  MotionMode.ts  ParticleSystem.ts  RenderPipeline.ts  TrailManager.ts  particleUtils.ts
src/modules/renderer/: IRenderer.ts  PostProcessingManager.ts  (+3 more)
src/types/: performance.ts
src/utils/: Logger.ts
src/workers/: noise.worker.ts
(+15 files in other folders)
